--- a/src/Templates/streamsLiveInfo.html.twig
+++ b/src/Templates/streamsLiveInfo.html.twig
@@ -121,6 +121,7 @@
                         <i class="fa fa-plus"></i> Favorite
                     </a>
                     {% endif %}
+                    {% include 'Module/shareUrl.html.twig' %}
                 </div>
                 <div class="col-lg-11 col-md-10 col-sm-9 col-xs-9">
                     <table>
