--- a/src/Templates/streamsMovieInfo.html.twig
+++ b/src/Templates/streamsMovieInfo.html.twig
@@ -103,6 +103,7 @@
                             <i class="fa fa-plus"></i> Favorite
                         </a>
                         {% endif %}
+                        {% include 'Module/shareUrl.html.twig' %}
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-9 col-xs-9">
