--- a/src/Templates/streamsReplayInfo.html.twig
+++ b/src/Templates/streamsReplayInfo.html.twig
@@ -54,14 +54,14 @@
             width: 100%;
         }
     </style>
-    <div class="container" style="margin: 3em; width: auto">
+    <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <h1 style="text-align: center;"><img src="{{ baseUrlAbsolute ~ stream.getStreamIcon }}" width="100px" >{{ stream.name }}</h1>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="col-md-4 col-sm-4 col-xs-4">
-                    <select class="form-control" id="replayChoice" style="margin-top: 2em;">
+                    <select class="form-control" id="replayChoice" style="margin-top: 2em; width: auto;">
                         {% for day in replayDays %}
                             <option value="{{ day }}" {% if loop.last %}selected{% endif %}>{{ day }}</option>
                         {% endfor %}
@@ -73,11 +73,11 @@
                         {% if replay.start|date('Y-m-d') == day %}
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="col-md-12 col-sm-12 col-xs-12" style="padding: 1em 0; border-bottom: thin solid grey" id="episode-{{ episode.id }}">
-                                    <div class="col-md-9 col-sm-9 col-xs-9">
+                                    <div class="col-md-9 col-sm-9 col-xs-8">
                                         <p>{{ replay.title }}</p>
                                         <p><b>{{ replay.start|date('H:i') }} - {{ replay.end|date('H:i') }}</b></p>
                                     </div>
-                                    <div class="col-md-3 col-sm-3 col-xs-3">
+                                    <div class="col-md-3 col-sm-3 col-xs-4" style="padding-left: initial">
                                         {% if isAndroid or isIos %}
                                             <a href="{{ vlcDeeplink ~ replay.streamLink }}" tabindex="1" class="btn btn-primary pull-right" style="width: 80%; font-size: 10px">
                                                 Play
