--- a/src/Templates/streamsLive.html.twig
+++ b/src/Templates/streamsLive.html.twig
@@ -22,7 +22,7 @@
 
         #flex {
             padding-top: 5em;
-            padding-left: 2em;
+            padding-left: 1.5em;
         }
 
         #flex .over {
@@ -42,8 +42,8 @@
         }
 
         .flex-images .item img {
-            width: 140px;
-            height: 140px;
+            width: 6.4em;
+            height: 6.4em;
         }
 
         #search {
@@ -166,18 +166,18 @@
         <ul>
             <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
                style="{% if currentCat == 'all' and sort != 5 %}color:white{% endif %}"
-               tabindex="2">
+               tabindex="{% if currentCat == 'all' and sort != 5 %}1{% else %}2{% endif %}">
                 <li>ALL ({{ nbStreamsByCat["all"] }})</li>
             </a>
             <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/favorites"
                style="{% if currentCat == 'favorites' %}color:white{% endif %}"
-               tabindex="2">
+               tabindex="{% if currentCat == 'favorites' %}1{% else %}2{% endif %}">
                 <li>FAVORITES ({{ nbStreamsByCat["favorites"] }})</li>
             </a>
             {% for category in categories %}
                 <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/{{ category.id }}"
                    style="{% if catName == category.name %}color:white{% endif %}"
-                   tabindex="2">
+                   tabindex="{% if catName == category.name %}1{% else %}2{% endif %}">
                     <li>
                         {{ category.name }}
                         {% if nbStreamsByCat[category.id] is defined %}
