disallow all cat

--- a/src/Templates/homeMain.html.twig
+++ b/src/Templates/homeMain.html.twig
@@ -16,7 +16,7 @@
                 <div class="b-content home">
                     {% if not hasExpired %}
                         <div class="col-md-4 col-sm-4 col-xs-12" id="divLive">
-                            {% if hasMovieFavorites %}
+                            {% if hasLiveFavorites %}
                             <a href="{{ baseUrlAbsolute }}/streams/live/favorites" tabindex="2" class="homeLink">
                             {% else %}
                             <a href="{{ baseUrlAbsolute }}/streams/live/all/5" tabindex="2" class="homeLink">
