--- a/src/Templates/streamsLive.html.twig
+++ b/src/Templates/streamsLive.html.twig
@@ -164,11 +164,11 @@
     </div>
     <div class="sidenav col-sm-3 col-xs-3 col-md-2">
         <ul>
-            <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
+            <!--a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
                style="{% if currentCat == 'all' and sort != 5 %}color:white{% endif %}"
                tabindex="{% if currentCat == 'all' and sort != 5 %}1{% else %}2{% endif %}">
                 <li>ALL ({{ nbStreamsByCat["all"] }})</li>
-            </a>
+            </a-->
             <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/favorites"
                style="{% if currentCat == 'favorites' %}color:white{% endif %}"
                tabindex="{% if currentCat == 'favorites' %}1{% else %}2{% endif %}">
