all cat is back + hide pr0n from search or all cat

--- a/src/Templates/streamsMovie.html.twig
+++ b/src/Templates/streamsMovie.html.twig
@@ -170,11 +170,11 @@
     </div>
     <div class="sidenav col-sm-3 col-xs-3 col-md-2">
         <ul>
-            <!--a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
+            <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
                style="{% if currentCat == 'all' and sort != 5 %}color:white{% endif %}"
                tabindex="2">
                 <li>ALL ({{ nbStreamsByCat["all"] }})</li>
-            </a-->
+            </a>
             <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/favorites"
                style="{% if currentCat == 'favorites' %}color:white{% endif %}"
                tabindex="2">
