--- a/src/Templates/base.html.twig
+++ b/src/Templates/base.html.twig
@@ -40,8 +40,10 @@
             {% endif %}
         </style>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            crossorigin="anonymous"></script>
+{#        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"#}
+{#            crossorigin="anonymous"></script>#}
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 
         <div id="overlay"></div>
         {% block body %}
