allow to convert m3u link in to ids

--- a/src/Templates/homeMain.html.twig
+++ b/src/Templates/homeMain.html.twig
@@ -63,10 +63,16 @@
                                 <i class="fa fa-info"></i> SYNC DATA
                             </a>
                         </div>
-                        <div class="col-md-3 col-sm-12 col-xs-12">
+                        <div class="col-md-3 col-sm-6 col-xs-6">
                             <a class="btn center-block btn-lg account rippler rippler-default"
                                href="{{ baseUrlAbsolute }}/extra/speedtest">
                                 <i class="fa fa-tachometer"></i> SPEEDTEST
+                            </a>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-6">
+                            <a class="btn center-block btn-lg account rippler rippler-default"
+                               href="{{ baseUrlAbsolute }}/extra/fast">
+                                <i class="fa fa-tachometer"></i> FAST
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-12 col-xs-12">
