--- a/src/Templates/streamsSerieInfo.html.twig
+++ b/src/Templates/streamsSerieInfo.html.twig
@@ -172,11 +172,11 @@
                                             Webplayer
                                         </a>
                                         {% endif %}
-                                        {% if not isTv %}
+{#                                        {% if not isTv %}#}
                                         <a href="{{ episode.streamLink }}" tabindex="1" class="btn btn-default pull-right" style="font-size: 10px">
                                             Download
                                         </a>
-                                        {% endif %}
+{#                                        {% endif %}#}
                                     </div>
                                     <!--div class="col-md-12 col-sm-12 col-xs-12">
                                         <p>
