--- a/src/Templates/accountIptv.html.twig
+++ b/src/Templates/accountIptv.html.twig
@@ -18,6 +18,13 @@
                     <input type="text" class="form-control" id="host" name="host" tabindex="3" value="{{ host }}">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
+                <br><br>
+                <div class="form-group">
+                    <label for="m3u">m3u:</label>
+                    <input type="text" class="form-control" id="m3u" placeholder="convert m3u" name="m3u" tabindex="1">
+                </div>
+                <button type="submit" class="btn btn-default">Convert</button>
+
             </form>
         </div>
     </div>
