--- a/src/Templates/extraFasttest.html.twig
+++ b/src/Templates/extraFasttest.html.twig
@@ -13,7 +13,7 @@
     <iframe
             width="100%"
             height="100%"
-            src="https://cstv.speedtestcustom.com/"
+            src="https://fast.com/"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
