--- a/src/Templates/accountIptv.html.twig
+++ b/src/Templates/accountIptv.html.twig
@@ -32,5 +32,5 @@
 {% endblock %}
 
 {% block bg %}
-    <img class="body-bg" src="{{ baseUrlAbsolute }}/img/bg.jpg">
+{#    <img class="body-bg" src="{{ baseUrlAbsolute }}/img/bg.jpg">#}
 {% endblock %}
