--- a/src/Templates/accountRegister.html.twig
+++ b/src/Templates/accountRegister.html.twig
@@ -21,5 +21,5 @@
 {% endblock %}
 
 {% block bg %}
-    <img class="body-bg" src="{{ baseUrlAbsolute }}/img/bg.jpg">
+{#    <img class="body-bg" src="{{ baseUrlAbsolute }}/img/bg.jpg">#}
 {% endblock %}
