--- a/src/Templates/ajax/streamsMovie.html.twig
+++ b/src/Templates/ajax/streamsMovie.html.twig
@@ -1,4 +1,4 @@
-{% for stream in streams|slice(start, maxContentPerPage) %}
+{% for stream in streams %}
     <a href="{{ baseUrlAbsolute }}/streams/movieInfo/{{ stream.streamid }}"
        tabindex="1"
        class="item-link"
