--- a/src/Templates/streamsSerie.html.twig
+++ b/src/Templates/streamsSerie.html.twig
@@ -8,14 +8,6 @@
 {% block body %}
     {% include 'Module/search.html.twig' %}
     <style>
-        #header {
-            width: 100%;
-            z-index: 10;
-            position: fixed;
-            background: white;
-            padding: 1em;
-            font-weight: bold;
-        }
         body {
             margin: 0;
         }
@@ -44,10 +36,6 @@
         .flex-images .item img {
             width: 100px;
             height: 160px;
-        }
-
-        #search {
-            margin: 0 5px;
         }
 
         #flex a:focus > .item {
@@ -152,18 +140,23 @@
                     <i class="fa fa-clock-o"></i>
                 </a>
             </div>
-            <a tabindex="4" class="btn" id="search">
-                <i class="fa fa-search"></i>
-            </a>
+            <div class="btn-group" role="group">
+                <a tabindex="4" class="btn" id="search">
+                    <i class="fa fa-search"></i>
+                </a>
+                <a href="{{ baseUrlAbsolute }}/streams/advancedSearch/{{ type }}" tabindex="5" class="btn">
+                    <i class="fa fa-search-plus"></i>
+                </a>
+            </div>
         </div>
     </div>
     <div class="sidenav col-sm-3 col-xs-3 col-md-2">
         <ul>
-            <!--a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
+            <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/all"
                style="{% if currentCat == 'all' and sort != 5 %}color:white{% endif %}"
                tabindex="2">
                 <li>ALL ({{ nbStreamsByCat["all"] }})</li>
-            </a-->
+            </a>
             <a href="{{ baseUrlAbsolute }}/streams/{{ type }}/favorites"
                style="{% if currentCat == 'favorites' %}color:white{% endif %}"
                tabindex="2">
@@ -207,7 +200,7 @@
         </ul>
     </div>
     <div id="flex" class="flex-images col-sm-offset-3 col-sm-9 col-xs-offset-3 col-xs-9 col-md-offset-2 col-md-10">
-        {% for stream in streams|slice(start, maxContentPerPage) %}
+        {% for stream in streams %}
             <a href="{{ baseUrlAbsolute }}/streams/serieInfo/{{ stream.serieId }}"
                tabindex="1"
                class="item-link"
