--- a/src/Templates/streamsMovieInfo.html.twig
+++ b/src/Templates/streamsMovieInfo.html.twig
@@ -6,38 +6,6 @@
             background: rgba(0,0,0,0.8);
         }
 
-        p {
-            margin: 5px 0em !important;
-        }
-
-        /* STARS */
-        .star.star-1:after {
-            width: 3px;
-        }
-        .star.star-2:after {
-            width: 4px;
-        }
-        .star.star-3:after {
-            width: 5px;
-        }
-        .star.star-4:after {
-            width: 6px;
-        }
-        .star.star-5:after {
-            width: 7px;
-        }
-        .star.star-6:after {
-            width: 8px;
-        }
-        .star.star-7:after {
-            width: 9px;
-        }
-        .star.star-8:after {
-            width: 10px;
-        }
-        .star.star-9:after {
-            width: 11px;
-        }
         .stars {
             text-align: center;
         }
@@ -144,7 +112,7 @@
 {% endblock %}
 
 {% block bg %}
-    {% if movie.backdropPath[0] is not empty %}
+    {% if movie.backdropPath[0] is not empty and movie.backdropPath[0] != '/asset/img/' %}
     <img class="body-bg" src="{{ baseUrlAbsolute ~ random(movie.backdropPath) }}">
     {% endif %}
 {% endblock %}
